--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
+    <div class="hero">
+        <div class="header">
         <div class="headerlogo">Header Logo</div>
         <div class="links">
             <ul>
@@ -15,12 +18,41 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-    <div class="hero">
-        <div class="text" id="1">This website is awesome</div>
-        <div class="text" id="2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        </div>
+    <div class="content">
+        <div class="sub-header">
+        <div class="text" id="one">This website is awesome</div>
+        <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <button id="sign-up">Sign up</button>
+        </div>
         <img src="./img/japan1.jpg" alt="random picture of japan">
+        <!-- WHAT ???-->
     </div>
+    </div>
+
+        <div class="title">Some random information.</div>
+        <div class="container">
+            <div class="info">
+            <img src="./img/japan2.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="info">
+                <img src="./img/japan3.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="info">
+                <img src="./img/japan4.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+            <div class="info">
+                <img src="./img/japan5.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+            </div>
+        </div>
+    
+    <div class="testimonial">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+        <div class="sub-text">-Thor, God of Thunder</div>
     </div>
     
 </body>
