--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
         <div class="sub-text">-Thor, God of Thunder</div>
     </div>
     
+    <div class="blue">
+        <div class="left">
+            <div class="big">Call to action! It's time!</div>
+            <div class="text">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="right">Sign up</button>
+    </div>
+
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
