--- a/index.html
+++ b/index.html
@@ -10,51 +10,52 @@
 <body>
     <div class="hero">
         <div class="header">
-        <div class="headerlogo">Header Logo</div>
-        <div class="links">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
+            <div class="headerlogo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
         </div>
+        <div class="content">
+            <div class="sub-header">
+                <div class="text" id="one">This website is awesome</div>
+                <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button id="sign-up">Sign up</button>
+            </div>
+            <div class="image">
+                <img src="./img/japan1.jpg" alt="random picture of japan">
+            </div>
         </div>
-    <div class="content">
-        <div class="sub-header">
-        <div class="text" id="one">This website is awesome</div>
-        <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button id="sign-up">Sign up</button>
-        </div>
-        <img src="./img/japan1.jpg" alt="random picture of japan">
-        <!-- WHAT ???-->
-    </div>
     </div>
 
-        <div class="title">Some random information.</div>
-        <div class="container">
-            <div class="info">
+    <div class="title">Some random information.</div>
+    <div class="container">
+        <div class="info">
             <img src="./img/japan2.jpg" alt="">
             <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="info">
-                <img src="./img/japan3.jpg" alt="">
-            <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="info">
-                <img src="./img/japan4.jpg" alt="">
-            <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
-            <div class="info">
-                <img src="./img/japan5.jpg" alt="">
-            <div class="text">This is some subtext under an illustration or image.</div>
-            </div>
         </div>
-    
+        <div class="info">
+            <img src="./img/japan3.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+        </div>
+        <div class="info">
+            <img src="./img/japan4.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+        </div>
+        <div class="info">
+            <img src="./img/japan5.jpg" alt="">
+            <div class="text">This is some subtext under an illustration or image.</div>
+        </div>
+    </div>
+
     <div class="testimonial">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
         <div class="sub-text">-Thor, God of Thunder</div>
     </div>
-    
+
     <div class="blue">
         <div class="left">
             <div class="big">Call to action! It's time!</div>
